[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "unistack"
version = "0.1.0"
description = "Observability and governance SDK for LangGraph agents"
requires-python = ">=3.10"
dependencies = [
    "langgraph==1.2.6",
    "langgraph-checkpoint-mongodb>=0.4.0",
    "pymongo>=4.16.0",
    "opentelemetry-sdk==1.43.0",
    "opentelemetry-api==1.43.0",
    "anthropic>=0.40.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["unistack*"]
