[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "unistack"
version = "0.2.0"
description = "Guardrails + human-in-the-loop for existing LangGraph agents"
readme = "README.md"
requires-python = ">=3.10"
# TODO: choose a license before publishing, e.g. license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
# langgraph is a RANGE, not a pin: the SDK latches onto the consumer's existing
# LangGraph agent, so it must install alongside whatever 1.x they already run.
dependencies = [
    "langgraph>=1.2,<2.0",
    "langgraph-checkpoint-mongodb>=0.4",
    "pymongo>=4.16.0",
    "anthropic>=0.40.0",
    "opentelemetry-sdk>=1.30,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.30,<2",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.scripts]
unistack = "unistack.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["unistack*"]
